--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ rel="stylesheet">
     
     <div class="header-div">
     
-        <a class="header-item" href="mailto:info@devstudio.com">
+        <a class="header-item contact-item" href="mailto:info@devstudio.com">
             <svg class="item-envelope"   width="16" 
                     height="12">
             <use href="./images/icons.svg#icon-envelope"></use>
         </svg>info@devstudio.com</a>
-        <a class="header-item" href="tel:+48111111111">
+        <a class="header-item contact-item" href="tel:+48111111111">
             <svg class="item-smartphone" width="10px"
                 height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
@@ -328,42 +328,42 @@ rel="stylesheet">
             <ul class="client-list">
                 <li>
                     <a href="#" class="client-item">
-                    <svg width="106px" height="60px">
+                    <svg width="170px" height="92px">
                         <use href="./images/icons.svg#icon-Client-1"></use>
                     </svg>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="client-item">
-                        <svg width="106px" height="60px">
+                        <svg width="170px" height="92px">
                             <use href="./images/icons.svg#icon-Client-2"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="client-item">
-                        <svg width="106px" height="60px">
+                        <svg width="170px" height="92px">
                             <use href="./images/icons.svg#icon-Client-3"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="client-item">
-                        <svg width="106px" height="60px">
+                        <svg width="170px" height="92px">
                             <use href="./images/icons.svg#icon-Client-4"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="client-item">
-                        <svg width="106px" height="60px">
+                        <svg width="170px" height="92px">
                             <use href="./images/icons.svg#icon-Client-5"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="client-item">
-                        <svg width="106px" height="60px">
+                        <svg width="170px" height="92px">
                             <use href="./images/icons.svg#icon-Client-6"></use>
                         </svg>
                     </a>
