--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,11 @@
 
     <div class="header-div">
     
-        <a class="header-item" href="mailto:info@devstudio.com">
+        <a class="header-item contact-item" href="mailto:info@devstudio.com">
             <svg class="item-envelope" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a>
-        <a class="header-item" href="tel:+48111111111">
+        <a class="header-item contact-item" href="tel:+48111111111">
             <svg class="item-smartphone" width="10px" height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>+48 111 111 111</a>
